Fixing some findbugs issues. Corrected CHIPPro pin mapping. Tidy up pom.xml